# RandPhyQuGeA

./: .dockerignore  .editorconfig  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  PhysicsQuestionGenerator.sln  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  commit_script.ps1  eslint.config.mjs  index.html  main.go  package-lock.json  package.json  tailwind.config.js  test_output.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
AvaloniaUI/: App.axaml  App.axaml.cs  AvaloniaUI.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
Console/: Console.csproj  Program.cs
Core/: Core.csproj
LaTeX/: LaTeX.csproj
Tests/: CommonMistakeDistractorGeneratorTests.cs  ExporterTests.cs  InMemoryTemplateRepositoryTests.cs  JsonPracticeResultRepositoryTests.cs  (+10 more)
physics_core/: Cargo.toml
physics_core/.cargo/: config.toml
physics_core/benches/: benchmarks.rs
physics_core/src/: cache.rs  config.rs  difficulty.rs  domain.rs  error.rs  evaluator.rs  exporters.rs  ffi.rs  formula_library.rs  generator.rs  lib.rs  metadata.rs  parser.rs  random.rs  spec_builder.rs  spec_merger.rs  template_analysis.rs  template_builder.rs  unit_conversion.rs  validation.rs  wasm_bridge.rs  weighted_selection.rs
physics_core/tests/: edge_cases_test.rs  fuzz_stubs.rs  integration_test.rs  pipeline_tests.rs  property_tests.rs  serde_tests.rs
(+346 files in other folders)
