[package]
name = "physics_core"
version = "0.1.0"
edition = "2021"
description = "Physics question generation core library with WASM support"
readme = "README.md"
repository = "https://github.com/randphyqugea/physics-question-generator"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
tempfile = "3"